Added menu page for tablet

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   display: -ms-grid;
   display: grid;
   row-gap: 2vh;
+  background-image: url(https://www.lefthudson.com/wp-content/uploads/2019/11/white-background-wallpaper-awesome-white-wallpapers-in-hd-barbaras-hd-wallpapers-ideas-of-white-background-wallpaper.jpg);
 }
 
 #container #header {
