--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 #container {
     display:grid;
     row-gap: 2vh;
+    background-image: url(https://www.lefthudson.com/wp-content/uploads/2019/11/white-background-wallpaper-awesome-white-wallpapers-in-hd-barbaras-hd-wallpapers-ideas-of-white-background-wallpaper.jpg);
   
    #header {
         display: grid;
