--- a/style2.scss
+++ b/style2.scss
@@ -5,6 +5,7 @@
 #container {
     display:grid;
     row-gap: 1vh;
+    background-image: url(https://www.lefthudson.com/wp-content/uploads/2019/11/white-background-wallpaper-awesome-white-wallpapers-in-hd-barbaras-hd-wallpapers-ideas-of-white-background-wallpaper.jpg);
     
   
    #header {
@@ -14,12 +15,13 @@
         height:20vh;
         
         background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+       
         h3 {
             font-size: larger;
             text-align: center;
             position: relative;
+            font-weight: bolder;
+            font-family: 'Source Serif Pro', serif;
             #pizza-logo {
                 position: absolute;
                 top:0;
@@ -52,8 +54,9 @@
         #heading {
             font-size: larger;
             text-align: center;
-            background-color: darkred;
-            color: white;
+            background-color: tan;
+            color: black;
+            font-weight: bolder;
         }
         #content-one {
             display: grid;
@@ -79,8 +82,8 @@
             min-height: 35vh;
            
             h3 {
-                background-color: darkred;
-                color: white;
+                background-color: tan;
+                color: black;
             }
             #contenttwo-img1 {
                 width:30%;
@@ -133,8 +136,8 @@
             min-height: 35vh;
             
             h3 {
-                background-color: darkred;
-                color: white;
+                background-color:tan;
+                color: black;
             }
             #content3-img1 {
                 position: absolute;
@@ -186,8 +189,8 @@
             position: relative;
             min-height: 120vh;
             h3 {
-                background-color:darkred;
-                color: white;
+                background-color:tan;
+                color: black;
             }
             #content4-img1 {
                 position: absolute;
@@ -251,12 +254,12 @@
             }
             #content4-atag4 {
                 top:25vh;
-                left:65vw;
+                left:60vw;
                 padding: 2px; 
             }
             #content4-atag5 {
                 top:25vh;
-                left:75vw;
+                left:70vw;
                 padding: 2px; 
             }
             #content4-atag6 {
@@ -420,10 +423,10 @@
         }
         #content-five {
             position: relative;
-            min-height: 130vh;
+            min-height: 90vh;
             h3 {
-                background-color:darkred;
-                color: white;
+                background-color:tan;
+                color: black;
             }
             #content5-img1  {
                 position: absolute;
@@ -577,8 +580,8 @@
             position: relative;
             min-height: 265vh;
             h3 {
-                background-color:darkred;
-                color: white;
+                background-color:tan;
+                color: black;
             }  
             #content6-img1,#content6-img3,#content6-img5,#content6-img7,#content6-img9,#content6-img11,#content6-img13 {
                 position: absolute;
@@ -758,18 +761,7 @@
                 top:246vh;
                 left: 63vw;
             }
-
-
-
-
-
-
-            
-
-
-            
-            
-        }
+         }
 
     }
     #footer {
@@ -779,6 +771,244 @@
         display: grid;
         grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
 
+
+    }
+    @media only screen and(min-width:768px)
+    {
+    
+         #header {
+             display: grid;
+             grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+             width: 100%;
+             height:8vh;
+             justify-items: center;
+             align-items: center;
+             h3 {
+                 position: relative;
+                 font-weight: bolder;
+                 font-size: large;
+                 #pizza-logo {
+                     position: absolute;
+                     top:2vh;
+                     width: 28%;
+                    }
+                }
+                a {
+                    text-decoration: none;
+                    background-color: darkred;
+                    color: white;
+                    padding: 2px;
+                }
+            }
+            #content {
+                #heading {
+                    height:4vh;
+                    font-size: x-large;
+                    font-weight: bolder;
+                }
+                #content-one {
+                    #contentone-atagone,#contentone-atagtwo {
+                        padding: 4px;
+                        font-size: x-large;
+                    }
+                    h3,h4 {
+                        font-size: x-large;
+                    }
+                }
+                #content-two {
+                    h3 {
+                        height:4vh;
+                        font-size: x-large;
+                        font-weight: bolder;
+                        
+                    }
+                    #contenttwo-img1 {
+                        position: absolute;
+                        left:7vw;
+                    }
+                    #contenttwo-h4tagone,#contenttwo-h4tagtwo {
+                       
+                        top:27vh;
+                        left:17vw;
+                        font-size: x-large;
+                    }
+                    #contenttwo-atagone,#contenttwo-atagtwo {
+                        
+                        top:30vh;
+                        left: 14vw;
+                        padding: 4px;
+                        font-size: x-large;
+                    }
+                    #contenttwo-h4tagtwo{
+                        left:65vw;
+                        
+                    }
+                    #contenttwo-atagtwo {
+                        left: 62vw;
+                    }
+                }
+
+                #content-three {
+                   
+                    min-height: 38vh;
+                    h3 {
+                        height:4vh;
+                        font-size: x-large;
+                        font-weight: bolder;
+                        
+                    }
+                    #content3-img1,#content3-img2 {
+                       
+                        top: 5vh;
+                        left: 7vw;
+                        width: 227px;
+                        height: 204px;
+                    }
+                    #content3-h4one,#content3-h4two {
+                     
+                        top:26vh;
+                        left:10vw;
+                        font-weight: bolder;
+                        font-size: x-large;
+                    }
+                    #content3-atagone,#content3-atagtwo {
+                        
+                        top:32vh;
+                        left:13vw;
+                        padding: 4px;
+                        font-size: x-large;
+                    }
+                    #content3-img2{
+                      
+                        left:57vw;
+                    }
+                    #content3-h4two {
+                        left:58vw;
+                    }
+                    #content3-atagtwo {
+                        left: 63vw;
+                    }
+
+                }
+                #content-four {
+                    min-height: 127vh;
+                    
+                    h3 {
+                        height:4vh;
+                        font-size: x-large;
+                        font-weight: bolder;
+                        
+                    }
+                    #content4-img1,#content4-img2,#content4-img3,#content4-img4,#content4-img5,#content4-img6 {
+                        width: 230px;
+                        height:230px;
+                        
+                    
+                    }
+                    #content4-h4one,#content4-h4two, #content4-h4three,#content4-h4four,#content4-h4five,#content4-h4six {
+                        
+                        top:28vh;
+                        left:8vw;
+                        font-size: x-large;
+                        font-weight: bolder;
+                    }
+                    #content4-atagone,#content4-atagtwo,#content4-atagthree,#content4-atag4,#content4-atag5,
+                     #content4-atag6, #content4-atag7,#content4-atag8,#content4-atag9,#content4-atag10,
+                     #content4-atag11,#content4-atag12,#content4-atag13,#content4-atag14,#content4-atag15,
+                     #content4-atag16,#content4-atag17,#content4-atag18 {
+                        
+                        top:31vh;
+                        padding:10px;
+                    }
+                    #content4-atagtwo {
+                       
+                        left: 12vw;
+                    }
+                    #content4-ptag1,#content4-ptag2,#content4-ptag3,#content4-ptag4,#content4-ptag5,#content4-ptag6 {
+                      
+                        top:37vh;
+                        font-size: medium;
+                        left:1vw;
+                        width:30%;
+                    }
+                    #content4-h4two {
+                       
+                        left:60vw;
+                    }
+                    #content4-atag5 ,#content4-atag11{
+                      
+                        left:71vw;
+                    }
+                    #content4-ptag2,#content4-ptag4,#content4-ptag6 {
+                      
+                        left:60vw;
+
+                    }
+                    #content4-img3,#content4-img4 {
+                       
+                        top:45vh;
+                    }
+                    #content4-h4three,#content4-h4four{
+                        
+                        top:68vh;
+                    }
+                    #content4-atag7,#content4-atag8,#content4-atag9,#content4-atag10,#content4-atag11,#content4-atag12 {
+                       
+                        top:71vh;
+                    }
+                    #content4-ptag3,#content4-ptag4 {
+                        top:77vh;
+                    }
+                    #content4-h4four {
+                        left: 62vw;
+                    }
+                    #content4-img5,#content4-img6 {
+                        top:86vh;
+                    }
+                    #content4-h4five,#content4-h4six{
+                        top:109vh;
+                    }
+                    #content4-atag13,#content4-atag14,#content4-atag15,#content4-atag16,#content4-atag17,#content4-atag18 {
+                        top:115vh;
+                    }
+                    #content4-ptag5,#content4-ptag6 {
+                        top:121vh;
+                    }
+                    #content4-h4six {
+                        left: 66vw;
+                    }
+                }
+                #content-five {
+                    h3 {
+                        height:4vh;
+                        font-size: x-large;
+                        font-weight: bolder;
+                    }
+                    #content5-img1 {
+                        width: 230px;
+                        height:230px;
+                    }
+                    #content5-h4one {
+                        top:28vh;
+                        left:6vw;
+                        font-size: x-large;
+                        font-weight: bolder;
+
+                    }
+                    #content5-atag1,#content5-atag2,#content5-atag3 {
+                        top:34vh;
+                        padding:10px;
+                    }
+                    #content5-ptag1 {
+                        top:40vh;
+                        font-size: medium;
+                        left:1vw;
+                        width:30%;
+                    }
+
+                }
+            }
+        
 
     }
 
