--- a/style.css
+++ b/style.css
@@ -133,8 +133,8 @@
   #container #header {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (minmax(150px, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     justify-items: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -146,10 +146,16 @@
   }
   #container #header h3 #pizza-logo {
     top: 4vh;
-    width: 20%;
+    width: 25%;
     position: absolute;
     top: 7vh;
     left: 5vw;
+  }
+  #container #header h3 a {
+    color: white;
+    text-decoration: none;
+    background-color: darkred;
+    padding: 1vh;
   }
   #container #header #pizza-logo-two {
     display: none;
@@ -212,8 +218,8 @@
   #container #header {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
