--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,6 @@
                 position: absolute;
                 top:0;
                 left: 0;
-
             }
             
         }
@@ -37,10 +36,6 @@
             font-size:smaller;
             transition: font-size 0.25s ease-in-out;
             text-decoration: none;
-            
-            
-
-           
         }
         
     }
@@ -132,11 +127,9 @@
     }
     @media only screen and(min-width:768px)
     {
-        
-            
             #header {
                 display: grid;
-                grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+                grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
                 justify-items: center;
                 align-items: center;
                 height: 15vh;
@@ -145,10 +138,16 @@
                     font-size: xx-large;
                     #pizza-logo {
                         top:4vh;
-                        width: 20%;
+                        width: 25%;
                         position: absolute;
                         top: 7vh;
                         left: 5vw;
+                    }
+                    a{
+                    color: white;
+                    text-decoration: none;
+                    background-color: darkred;
+                    padding: 1vh;
                     }
                     
 
@@ -232,7 +231,7 @@
             
             #header {
                 display: grid;
-                grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+                grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
                 align-items: center;
                 justify-items: center;
                 width: 100%;
