--- a/style2.scss
+++ b/style2.scss
@@ -114,12 +114,12 @@
     @media only screen and (min-width:768px)
     {  
         #header{
-            
+            height:25vh;
             h3 {
                 font-size:x-large ;
-                img {
-                    width:32%;
-                    margin-top: 2vh;
+                #pizza-logo {
+                    width:27%;
+                    margin-top: 2.5vh;
                 }
             }
             display: grid;
@@ -154,7 +154,8 @@
             }
             #content-two {
                 min-height:480vh;
-                grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+                grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+                column-gap: 4vw;
                 .content-image {
                     width:240px;
                     height: 240px;
@@ -165,6 +166,7 @@
                 }
                 .content-atag {
                     font-size: x-large;
+                    text-align: center;
                 }
                 .content-ptag {
                     font-size:x-large;
@@ -191,6 +193,90 @@
     }
     @media only screen and (min-width:1020px)
     {
+        #header {
+            height: 20vh;
+           
+            h3 {
+                font-size: xx-large;
+
+                #pizza-logo{
+                    width:35%;
+                    margin-top: 4vh;  
+                }
+            }
+            a {
+                padding: 11px;
+                @include atagAnimation ();
+            }
+            
+        }
+        #content {
+            row-gap: 7vh;
+            width: 90%;
+            margin-left: 5%;
+            #heading {
+                margin-left: 8vw;
+                margin-right: 8vw;
+                color: #333;
+
+            }
+            #content-one {
+                h3 {
+                    margin-left: 11vw;
+                }
+                #contentone-atagone {
+                    margin-left: 18vw;
+                    @include atagAnimation ();
+                }
+                h4 {
+                    margin-left:1vw;
+                }
+                #contentone-atagtwo {
+                    margin-right: 15vw;
+                    @include atagAnimation ();
+                }
+
+            }
+            #content-two {
+                #content2-1,#content2-2,#content2-3,#content2-4,#content2-5,#content2-6,#content2-7,#content2-8,#content2-9,
+                #content2-10,#content2-11,#content2-12,#content2-13,#content2-14,#content2-15,#content2-16,#content2-17,
+                #content2-18,#content2-19, #content2-20,#content2-21, #content2-22,#content2-23,#content2-24
+                {
+                    .content-image {
+                        transition: all 0.25s ease-in-out;
+                        &:hover {
+                            width: 270px;
+                            height: 270px;
+                        }
+                    }
+                    #atag-1,#atag-2,#atag-3,#atag-4,#atag-5,#atag-6,#atag-7,#atag-8,#atag-9,#atag-10,#atag-11,#atag-12,#atag-13,
+                    #atag-14,#atag-15,#atag-16,#atag-17,#atag-18,#atag-19,#atag-20,#atag-21,#atag-22,#atag-23,#atag-24 {
+                        .content-atag {
+                           @include atagAnimation ();
+                        }
+                    }
+                }
+            }
+            
+           
+        }
+        #footer {
+            justify-items: normal;
+            #footerdiv-one {
+                a {
+                    img {
+                        width: 8%;
+                        transition: all 0.25s ease-in-out;
+                        &:hover {
+                            width: 32px;
+                            height: 32px;
+                        }
+                    }
+                }
+            }
+                
+        } 
+
 
     }
 
